--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^12.1.10",
     "clsx": "^1.1.1",
     "light-uid": "^1.1.0",
+    "patch-styles": "^0.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
